Closed Bug 1065309 Opened 11 years ago Closed 11 years ago

IonMonkey MIPS: Test asm.js/testMathLib.js fails on MIPS

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: aleksandar.zlicic, Assigned: aleksandar.zlicic)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:26.0) Gecko/20100101 Firefox/26.0 Build ID: 20131206152142 Actual results: FAIL - asm.js/testMathLib.js TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/asm.js/testMathLib.js | js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32 (code 3, args "--no-baseline --no-ion") INFO exit-status : 3 INFO timed-out : False INFO stderr 2> js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32 FAIL - asm.js/testMathLib.js TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/asm.js/testMathLib.js | js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32 (code 3, args "") INFO exit-status : 3 INFO timed-out : False INFO stderr 2> js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32 FAIL - asm.js/testMathLib.js TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/asm.js/testMathLib.js | js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32 (code 3, args "--ion-eager --ion-offthread-compile=off") INFO exit-status : 3 INFO timed-out : False INFO stderr 2> js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32 FAIL - asm.js/testMathLib.js TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/asm.js/testMathLib.js | js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32 (code 3, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --no-sse3 --no-threads") INFO exit-status : 3 INFO timed-out : False INFO stderr 2> js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32 FAIL - asm.js/testMathLib.js TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/asm.js/testMathLib.js | js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32 (code 3, args "--baseline-eager") INFO exit-status : 3 INFO timed-out : False INFO stderr 2> js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32 FAIL - asm.js/testMathLib.js TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/asm.js/testMathLib.js | js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32 (code 3, args "--baseline-eager --no-fpu") INFO exit-status : 3 INFO timed-out : False INFO stderr 2> js/src/jit-test/tests/asm.js/testMathLib.js:66:4 Error: Assertion failed: got 31, expected 32
Assignee: nobody → aleksandar.zlicic
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Hardware: x86_64 → Other
Change in js/src/jit/mips/Assembler-mips.cpp: Instruction was not properly encoded. Both rt and rd fields of the CLZ instruction must contain the same value, otherwise the operation of the instruction is unpredictable. Change in js/src/jit/mips/Simulator-mips.cpp: gcc builtin function __builtin_clz(x) returns the number of leading 0-bits in x, starting at the most significant bit position. However, If x is 0, the result is undefined.
Attachment #8487171 - Flags: review?(jdemooij)
Attachment #8487171 - Flags: review?(jdemooij) → review+
For small patches that only touch jit/mips/* code, I think it's fine to just request review from :rankov in the future :)
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: