Bug 1065309 - IonMonkey MIPS: Test asm.js/testMathLib.js fails on MIPS r=jandem